Fixed spacing and size on order

--- a/client/src/pages/Order/Order.scss
+++ b/client/src/pages/Order/Order.scss
@@ -51,6 +51,8 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      font-size: 17px;
 
       @media screen and (max-width: 700px) {
         padding-left: 10px;
@@ -58,6 +60,10 @@
 
       @media screen and (max-width: 550px) {
         padding: 20px;
+      }
+
+      svg {
+        margin-right: 10px;
       }
 
       a {
